--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # OpenWeatherMap API Configuration
 # Get your free API key from: https://openweathermap.org/api
 
-OPENWEATHER_API_KEY=07b7e031f58f204e2903a42109870f2e
+OPENWEATHER_API_KEY="make shure to put your api key here "
 
 # Server Configuration
 PORT=3001
